
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.correiam.checkmeta.MetaActivity">


    <EditText
        android:id="@+id/tvIdMetaActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_meta"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:singleLine="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_meta"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:maxLines="5"
        android:maxLength="255"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duedate_meta"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/etDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:editable="false"
        android:onClick="showDatePickerDialog" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_meta"
        android:visibility="gone"/>

    <Spinner android:id="@+id/spState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/status_meta"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvActualDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualdate_meta"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/etActualDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:editable="true"
        android:onClick="showDatePickerDialog"
        android:visibility="gone" />

</LinearLayout>
